--- a/src/Integration/Resources/Strings.resx
+++ b/src/Integration/Resources/Strings.resx
@@ -749,4 +749,12 @@ This is the general format to use when writing errors to output window or when t
   <data name="Unbind_State_Succeeded" xml:space="preserve">
     <value>Unbinding operation completed succesfully.</value>
   </data>
+  <data name="Unbind_Command_DisplayText" xml:space="preserve">
+    <value>Unbind</value>
+    <comment>Menu item display text</comment>
+  </data>
+  <data name="Unbind_Command_Tooltip" xml:space="preserve">
+    <value>Unbinds the solution from the SonarQube project and closes the connection to the SonarQube server</value>
+    <comment>Menu item tool tip</comment>
+  </data>
 </root>
