--- a/src/Integration/Resources/Strings.resx
+++ b/src/Integration/Resources/Strings.resx
@@ -749,4 +749,7 @@ This is the general format to use when writing errors to output window or when t
     <value>Unbinds the solution from the SonarQube project and closes the connection to the SonarQube server</value>
     <comment>Menu item tool tip</comment>
   </data>
+  <data name="WarningProjectsWithSonarRulesWhileNewConnected" xml:space="preserve">
+    <value>Ruleset for projects '{0}' contain Sonar rules. This is not a supported configuration, any enabled rules that are not in the project Quality Profile won't be enabled. Please remove the ruleset and configure the rules on your SonarQube/SonarCloud Quality Profile instead.</value>
+  </data>
 </root>
