--- a/src/Integration.Vsix/Resources/Strings.resx
+++ b/src/Integration.Vsix/Resources/Strings.resx
@@ -121,29 +121,41 @@
     <value>Cannot find tool window with the specified guid: {0}</value>
     <comment>Exception message, {0} guid</comment>
   </data>
-  <data name="Daemon_DaemonDownloaded" xml:space="preserve">
+  <data name="Daemon_Downloaded" xml:space="preserve">
     <value>Finished downloading the daemon.</value>
   </data>
-  <data name="Daemon_DaemonInstalled" xml:space="preserve">
-    <value>Finished installing the daemon.</value>
-  </data>
-  <data name="Daemon_DownloadingDaemon" xml:space="preserve">
+  <data name="Daemon_Downloading" xml:space="preserve">
     <value>Downloading the daemon...</value>
   </data>
   <data name="Daemon_InitializationComplete" xml:space="preserve">
-    <value>Finished initializing the daemon.</value>
+    <value>Finished initializing the daemon package.</value>
   </data>
   <data name="Daemon_Initializing" xml:space="preserve">
-    <value>Initializing the daemon...</value>
+    <value>Initializing the daemon package...</value>
   </data>
-  <data name="Daemon_InstallingDaemon" xml:space="preserve">
+  <data name="Daemon_Installed" xml:space="preserve">
+    <value>Finished installing the daemon.</value>
+  </data>
+  <data name="Daemon_Installing" xml:space="preserve">
     <value>Installing the daemon...</value>
+  </data>
+  <data name="Daemon_Started" xml:space="preserve">
+    <value>Daemon started successfully.</value>
+  </data>
+  <data name="Daemon_Starting" xml:space="preserve">
+    <value>Starting the daemon...</value>
+  </data>
+  <data name="Daemon_Stopped" xml:space="preserve">
+    <value>Daemon stopped successfully.</value>
+  </data>
+  <data name="Daemon_Stopping" xml:space="preserve">
+    <value>Stopping the daemon...</value>
   </data>
   <data name="ERROR_ConfiguringDaemon" xml:space="preserve">
     <value>Error occurred configuring the daemon: {0}</value>
   </data>
   <data name="ERROR_InitializingDaemon" xml:space="preserve">
-    <value>Error occurred initializing the daemon: {0}</value>
+    <value>Error occurred initializing the daemon package: {0}</value>
     <comment>Error message in output window when an exception thrown during async daemon initialization</comment>
   </data>
   <data name="ERROR_InstallingDaemon" xml:space="preserve">
