--- a/src/Integration/Resources/Strings.resx
+++ b/src/Integration/Resources/Strings.resx
@@ -739,10 +739,10 @@ This is the general format to use when writing errors to output window or when t
     <value>Failed to fetch notifications: {0}</value>
   </data>
   <data name="Suppressions_ERROR_Fetching" xml:space="preserve">
-    <value>Failed to synchronize suppressions: {0}</value>
+    <value>Failed to fetch suppressions: {0}</value>
   </data>
   <data name="Suppressions_NotConnected" xml:space="preserve">
-    <value>Cannot synchronize suppressions - not connected to a SonarQube server</value>
+    <value>Cannot fetch suppressions - not connected to a SonarQube server</value>
     <comment>Warning in output window</comment>
   </data>
   <data name="Suppression_Checking" xml:space="preserve">
