--- a/src/Integration.Vsix/Resources/Strings.resx
+++ b/src/Integration.Vsix/Resources/Strings.resx
@@ -117,6 +117,14 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="AnalyzerManager_InConnectedMode" xml:space="preserve">
+    <value>Connected mode detected.</value>
+    <comment>Output window message</comment>
+  </data>
+  <data name="AnalyzerManager_InStandaloneMode" xml:space="preserve">
+    <value>Standalone mode detected.</value>
+    <comment>Output window message</comment>
+  </data>
   <data name="CannotFindToolWindow" xml:space="preserve">
     <value>Cannot find tool window with the specified guid: {0}</value>
     <comment>Exception message, {0} guid</comment>
@@ -195,6 +203,18 @@
   </data>
   <data name="Notifications_SavingSettings" xml:space="preserve">
     <value>Saving notifications settings...</value>
+    <comment>Output window message</comment>
+  </data>
+  <data name="SL_ERROR" xml:space="preserve">
+    <value>SonarLint package: error occurred: {0}</value>
+    <comment>Output window message</comment>
+  </data>
+  <data name="SL_InitializationComplete" xml:space="preserve">
+    <value>Finishing initializing the SonarLint package</value>
+    <comment>Output window message</comment>
+  </data>
+  <data name="SL_Initializing" xml:space="preserve">
+    <value>Initializing the SonarLint package...</value>
     <comment>Output window message</comment>
   </data>
   <data name="Telemetry_ERROR" xml:space="preserve">
