--- a/src/Integration.Vsix/Resources/Strings.resx
+++ b/src/Integration.Vsix/Resources/Strings.resx
@@ -257,4 +257,17 @@
     <value>Initializing the telemetry package...</value>
     <comment>Output window message</comment>
   </data>
+  <data name="Daemon_Download_ERROR" xml:space="preserve">
+    <value>Failed to activate support of additional languages: {0}
+
+See the SonarLint output window for more detail.</value>
+    <comment>Modal error dialog message</comment>
+  </data>
+  <data name="Daemon_Download_ErrorDlgTitle" xml:space="preserve">
+    <value>SonarLint - download error</value>
+    <comment>Title for modal error dialogue box</comment>
+  </data>
+  <data name="Daemon_Download_ErrorLogMessage" xml:space="preserve">
+    <value>Download error:</value>
+  </data>
 </root>
