--- a/src/Integration.Vsix/SonarLintDaemon/DaemonStrings.resx
+++ b/src/Integration.Vsix/SonarLintDaemon/DaemonStrings.resx
@@ -117,41 +117,20 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="ERROR_ProcessRunner_ExeNotFound" xml:space="preserve">
-    <value>Execution failed. The specified executable does not exist: {0}</value>
+  <data name="FileMonitor_ErrorHandlingFileChange" xml:space="preserve">
+    <value>Error handling file change notification: {0}</value>
   </data>
-  <data name="MSG_CmdLine_SensitiveCmdLineArgsAlternativeText" xml:space="preserve">
-    <value>&lt;sensitive data removed&gt;</value>
+  <data name="FileMonitor_FileChanged" xml:space="preserve">
+    <value>File changed: {0}. Change type: {1}</value>
   </data>
-  <data name="MSG_ExecutingFile" xml:space="preserve">
-    <value>Executing file {0}
-  Args: {1}
-  Working directory: {2}
-  Timeout (ms):{3}
-  Process id: {4}</value>
+  <data name="Settings_ErrorLoadingSettings" xml:space="preserve">
+    <value>Error loading user settings from "{0}". Default rules configuration will be used.
+  Error message: {1}</value>
   </data>
-  <data name="MSG_ExecutionExitCode" xml:space="preserve">
-    <value>Process returned exit code {0}</value>
+  <data name="Settings_LoadedUserSettings" xml:space="preserve">
+    <value>Loaded user settings from "{0}".</value>
   </data>
-  <data name="MSG_Prefix_DEBUG" xml:space="preserve">
-    <value>DEBUG: </value>
-  </data>
-  <data name="MSG_Prefix_ERROR" xml:space="preserve">
-    <value>ERROR: </value>
-  </data>
-  <data name="MSG_Prefix_WARN" xml:space="preserve">
-    <value>WARNING: </value>
-  </data>
-  <data name="MSG_Runner_OverwritingEnvVar" xml:space="preserve">
-    <value>Overwriting the value of environment variable '{0}'. Old value: {1}, new value: {2}</value>
-  </data>
-  <data name="MSG_Runner_SettingEnvVar" xml:space="preserve">
-    <value>Setting environment variable '{0}'. Value: {1}</value>
-  </data>
-  <data name="WARN_ExecutionTimedOutKilled" xml:space="preserve">
-    <value>Timed out after waiting {0} ms for process {1} to complete: it has been terminated, but its child processes may still be running.</value>
-  </data>
-  <data name="WARN_ExecutionTimedOutNotKilled" xml:space="preserve">
-    <value>Timed out after waiting {0} ms for process {1} to complete: it could not be terminated and might still be running.</value>
+  <data name="Settings_NoUserSettings" xml:space="preserve">
+    <value>User settings file does not exist at "{0}". Using default rules configuration.</value>
   </data>
 </root>
