--- a/src/Integration.Vsix/SonarLintDaemon/DaemonStrings.resx
+++ b/src/Integration.Vsix/SonarLintDaemon/DaemonStrings.resx
@@ -127,10 +127,17 @@
     <value>Error loading user settings from "{0}". Default rules configuration will be used.
   Error message: {1}</value>
   </data>
+  <data name="Settings_ErrorSavingSettings" xml:space="preserve">
+    <value>Error saving user settings to "{0}".
+  Error: {1}</value>
+  </data>
   <data name="Settings_LoadedUserSettings" xml:space="preserve">
     <value>Loaded user settings from "{0}".</value>
   </data>
   <data name="Settings_NoUserSettings" xml:space="preserve">
     <value>User settings file does not exist at "{0}". Using default rules configuration.</value>
+  </data>
+  <data name="Settings_SavedUserSettings" xml:space="preserve">
+    <value>Saved user settings to "{0}".</value>
   </data>
 </root>
