--- a/src/Integration.Vsix/SonarLintDaemon/DaemonStrings.resx
+++ b/src/Integration.Vsix/SonarLintDaemon/DaemonStrings.resx
@@ -117,6 +117,20 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="DisableRule_DisabledRule" xml:space="preserve">
+    <value>Disabled rule "{0}"</value>
+  </data>
+  <data name="DisableRule_ErrorCheckingCommandStatus" xml:space="preserve">
+    <value>Error in DisableCommandRule.QueryStatus:
+  Error: {0}</value>
+  </data>
+  <data name="DisableRule_ErrorDisablingRule" xml:space="preserve">
+    <value>Error disabling rule "{0}":
+  Error: {1}</value>
+  </data>
+  <data name="DisableRule_UnknownErrorCode" xml:space="preserve">
+    <value>{unknown}</value>
+  </data>
   <data name="FileMonitor_ErrorHandlingFileChange" xml:space="preserve">
     <value>Error handling file change notification: {0}</value>
   </data>
