Add Tools Options button to open settings file Fixed #1019

--- a/src/Integration.Vsix/Resources/Strings.resx
+++ b/src/Integration.Vsix/Resources/Strings.resx
@@ -331,4 +331,9 @@
     <value>re-analyze open documents</value>
     <comment>Output window message</comment>
   </data>
+  <data name="ToolsOptions_ErrorOpeningSettingsFile" xml:space="preserve">
+    <value>Error opening settings file "{0}":
+  Error: {1}</value>
+    <comment>Output window message</comment>
+  </data>
 </root>
