--- a/src/Integration/Resources/Strings.resx
+++ b/src/Integration/Resources/Strings.resx
@@ -752,4 +752,8 @@ This is the general format to use when writing errors to output window or when t
   <data name="Bind_Ruleset_SomeProjectsDoNotNeedToBeUpdated" xml:space="preserve">
     <value>Ruleset binding: the following projects already reference the generated ruleset:</value>
   </data>
+  <data name="FailedToCreateRulesConfigForLanguage" xml:space="preserve">
+    <value>Failed to create the rules configuration for language {0}</value>
+    <comment>Output window message displayed when the application failed to fetch and create the rules configuration associated with a language. {0} the language name.</comment>
+  </data>
 </root>
