--- a/src/Integration/Resources/Strings.resx
+++ b/src/Integration/Resources/Strings.resx
@@ -622,9 +622,9 @@ This is the general format to use when writing errors to output window or when t
     <value>   {0}</value>
     <comment>Output window message format. Used whenever the message should be displayed as a sub-message from a step message so the user can clearly identify the grouping. {0} the actual message to display.</comment>
   </data>
-  <data name="MinimumSupportedSonarQubePlugin" xml:space="preserve">
-    <value>Language: '{0}', Minimum version: '{1}'</value>
-    <comment>Error message displayed for every supported plugin when none of them match the minimum required version. {0} the plugin language name, {1} the plugin minimum version.</comment>
+  <data name="InstalledAndMinimumSonarQubePlugin" xml:space="preserve">
+    <value>Language: '{0}', Installed version: '{1}', Minimum version: '{2}'</value>
+    <comment>Error message displayed for every supported plugin when none of them match the minimum required version. {0} the plugin language name, {1} the installed plugin version, {2} the minimum plugin version.</comment>
   </data>
   <data name="DetectingSonarQubePlugins" xml:space="preserve">
     <value>Detecting server plugins</value>
