Renamed binding config classes and interfaces
* no code changes - only renames.
* there were too many interfaces/classes with "Rules" in the name. Renamed the binding-related ones to include "Binding" to make it clearer they are binding-specific.
* shortened names.

--- a/src/Integration/Resources/Strings.resx
+++ b/src/Integration/Resources/Strings.resx
@@ -742,9 +742,9 @@ This is the general format to use when writing errors to output window or when t
   <data name="Bind_Ruleset_SomeProjectsDoNotNeedToBeUpdated" xml:space="preserve">
     <value>Ruleset binding: the following projects already reference the generated ruleset:</value>
   </data>
-  <data name="FailedToCreateRulesConfigForLanguage" xml:space="preserve">
-    <value>Failed to create the rules configuration for language {0}</value>
-    <comment>Output window message displayed when the application failed to fetch and create the rules configuration associated with a language. {0} the language name.</comment>
+  <data name="FailedToCreateBindingConfigForLanguage" xml:space="preserve">
+    <value>Failed to create the configuration for language {0}</value>
+    <comment>Output window message displayed when the application failed to fetch and create the binding configuration associated with a language. {0} the language name.</comment>
   </data>
   <data name="Bind_Project_NotRequired" xml:space="preserve">
     <value>Project-level binding is not required for project '{0}'</value>
